--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -21,10 +21,10 @@ jobs:
         dotnet-version: ${{ matrix.dotnet }}
 
     - name: Restore 
-      run: dotnet restore
+      run: dotnet restore src
        
     - name: Build 
-      run: dotnet build Solution.sln --configuration Release --no-restore
+      run: dotnet build src --configuration Release --no-restore
      
     - name: Tests
-      run: dotnet test --configuration Release --no-build --no-restore
+      run: dotnet test src --configuration Release --no-build --no-restore
