Se termina con los E2ETests.

--- a/src/Presentation/TodoItems.Presentation.API/Properties/launchSettings.json
+++ b/src/Presentation/TodoItems.Presentation.API/Properties/launchSettings.json
@@ -9,10 +9,11 @@
     }
   },
     "profiles": {
-        "[DEV]": {
+        "[DEV | CONSOLE]": {
             "commandName": "Project",
             "launchBrowser": false,
             "dotnetRunMessages": true,
+            "commandLineArgs": "--console",
             "environmentVariables": {
                 "ASPNETCORE_ENVIRONMENT": "Development"
             },
