--- a/src/Application/TodoItems.Application/TodoItems.Application.csproj
+++ b/src/Application/TodoItems.Application/TodoItems.Application.csproj
@@ -13,6 +13,7 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="14.0.0" />
     <PackageReference Include="FluentValidation" Version="10.0.4" />
+    <PackageReference Include="SharpGrip.FluentValidation.AutoValidation.Mvc" Version="1.5.0" />
     <PackageReference Include="MediatR" Version="14.0.0" />
   </ItemGroup>
   
